Fixed Image distortion for prod mobile view and updated img tags to Image

--- a/styles/sections/index/about.module.scss
+++ b/styles/sections/index/about.module.scss
@@ -138,6 +138,7 @@
 			}
 
 			.image {
+				min-height: 30rem;
 				padding: 1rem;
 				&.technicalSvg {
 					position: absolute;
